commit for new page

--- a/src/Components/ConnectWallet/style.css
+++ b/src/Components/ConnectWallet/style.css
@@ -2,8 +2,8 @@
   padding: 10px 16px;
   border-radius: 4px;
 }
-.header-main{
-    background-color: black;
+
+.logo {
 }
 .logo-text {
   font-weight: 700;
